# mini

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py  test_mini.py
.github/workflows/: pip.yml
include/mimi/: mini.h
include/mini/: mini.h
src/: bind.cc  mini.cc
src/minipy/: __init__.py
test/: Test.cmake  main.cc  mini.py
