[build-system]
requires = [
  "cmake>=3.17",
  "nanobind",
  "ninja; platform_system!='Windows'",
  "scikit-build==0.14.0",
  "setuptools>=42",
  "wheel",
]

build-backend = "setuptools.build_meta"

[project]
name = "minipy"
version = "1.4.0"
description = "Minimizer extraction utility library as described in minimap paper"
readme = "README.md"
authors = [
    {name = "Tvrtko Brekalo", email="brekalo.tvrtko@gmail.com"},
]

requires-python = ">=3.8"
