[project]
name = "minipy"
version = "1.4.0"
description = "Minimizer extraction utility library as described in minimap paper."
readme = "README.md"
authors = [
    {name = "Tvrtko Brekalo", email="t@tbrekalo.xyz"},
]
requires-python = ">=3.8"
dependencies = [
  "nanobind>=1.8",
]

[project.optional-dependencies]
dev = [
  "black",
  "ipython",
  "isort",
  "litecli",
  "pyre",
  "pyre-check",
  "pyright",
  "ruff",
  "ruff-lsp",
  "watchman",
]

[build-system]
requires = ["scikit-build-core >=0.5.1", "nanobind >=1.8"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.5.1"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests"
test-requires = "pytest"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
